[Task Manager] Implicitly white list more process states.

If you minimise GMail, it disappears from the task manager, so allow the
LAST_ACTIVITY process state to be displayed for ARC processes.

Additionally allow FOREGROUND_SERVICE since foreground services are user
visible.

BUG=738651

Change-Id: I403b9946fbbb29b115fe1877f63bb64e3fe3b2c7